# wazuh-ocsf-etl

./: .env.example  .gitignore  Cargo.toml  FIELD_MAPPINGS.md  README.md  install.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
config/: field_mappings.toml
docs/: architecture.md  reference-full.md
src/: classify.rs  config.rs  db.rs  field_paths.rs  json.rs  main.rs  record.rs  state.rs  tailer.rs  tests.rs  transform.rs  unmapped.rs  validator.rs  zmq.rs
src/input/: mod.rs  state.rs  tailer.rs  zmq.rs
src/output/: db.rs
src/pipeline/: field_paths.rs  mod.rs  record.rs  transform.rs  validator.rs
src/util/: json.rs  mod.rs  unmapped.rs
