[package]
name = "wazuh-ocsf-etl"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Wazuh alert → OCSF → ClickHouse ETL pipeline"
license = "MIT"

[[bin]]
name = "wazuh-ocsf-etl"
path = "src/main.rs"

[dependencies]
# Async runtime – "full" includes fs, io, sync, signal, time, rt-multi-thread
tokio = { version = "1", features = ["full"] }

# JSON parsing and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ClickHouse async client
clickhouse = "0.14.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config from env / .env files
dotenvy = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for sanitization
regex = "1"

# Lazy static for compiled regexes
once_cell = "1"
anyhow = "1.0.102"
toml = "0.9.8"

# ZeroMQ — pure-Rust async, no C / libzmq dependency.
# Used when INPUT_MODE=zeromq to subscribe directly to wazuh-analysisd PUB socket.
zeromq = "0.5.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
too_many_arguments = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
manual_range_patterns = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
